# declutter-google-calendar

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
cli_documentation/: index.html
decluttergcal/: config.py
decluttergcal/calendar/: calendar.py  delete.py  get.py  utils.py
decluttergcal/cli/: cli.py  delete.py  get.py
docs/: README.md  add_page.md  cli_documentation.md  documentation.md  google_workspace_setup.md  index.md
gcalcli/: config.py
gcalcli/calendar/: __init__.py  calendar.py  delete.py  gcal_service.py  get.py  service.py  utils.py
gcalcli/cli/: cli.py  delete.py  get.py
google_workspace_setup/: index.html
search/: search_index.json
